--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="col-12 search">
           <form id="search-form">
             <div class="input-group input-group-lg">
-              <input
-                class="form-control search-bar"
-                placeholder="Search for a movie..."
-              />
+                <input
+                  class="form-control search-bar"
+                  placeholder="Search for a movie..."
+                />
               <button class="btn btn-primary input-group-btn" type="submit">
                 Search
               </button>
@@ -37,6 +37,21 @@
       <div class="row">
         <div class="col-12 results">
           <!-- MOVIES SHOW UP HERE! -->
+          <div class="movies-container"> <!--all individual movie renderings are contained here-->
+            <div class="movie">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="no_image.png" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title">Movie Title</h5>
+                    <p class="card-text">placeholder info about the movie! great movie about... </p>
+                    <div class="containerA">
+                      <div class="box-a"><a href="#" class="btn btn-primary">Add</a></div>
+                      <div class="box-b"><p class="card-text" id="card-text-right">Release-date: </p></div>
+                    </div>
+                  </div>
+              </div>    
+            </div>
+          </div>
         </div>
       </div>
     </div>
